fix buttons on iphonex

--- a/css/main.less
+++ b/css/main.less
@@ -441,8 +441,7 @@ header{
         position: absolute;
         z-index:10;
         right:10px;
-        top: 50%;
-        transform: translateY(-50%);
+        bottom: 10px;
 
         background:none;
         border-color:white;
@@ -451,8 +450,7 @@ header{
     .back-button{
         position: absolute;
         left:10px;
-        top: 50%;
-        transform: translateY(-50%);
+        bottom: 10px;
 
         background:none;
         border-color:white;
